--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-02-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* HACKING (Editing `.m4sh' Files): Document preferred function
+	header layout.
+	* config/ltmain.m4sh (func_win32_libid, func_infer_tag)
+	(func_generate_dlsyms, func_extract_an_archive, func_extract_archives):
+	adjust to fit.
+
 2005-01-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Unicos 9 sed rejects
