--- a/HACKING
+++ b/HACKING
@@ -200,7 +200,19 @@ yyyy-mm-dd  Name of Author  <email@address>  (tiny change)
   variable names.  Don't use `return', instead echo the result of a
   function and call it from within backquotes.
 
-* Function names should be prefixed `func_'.
+* Function names should be prefixed `func_', the function header should
+  look like this:
+
+  # func_foo [ OPTIONS ]
+  # Description of what func_foo does and returns.
+  func_foo ()
+  {
+      $opt_debug
+      # contents of func_foo ...
+  }
+
+  The `$opt_debug' is used to enable shell tracing (Korn shells reset
+  this on function entry).
 
 * For functions that are called frequently, if you need to return a
   value, don't cause unneccessary forking of the shell using echo as
