--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-02-03  Peter O'Gorman  <peter@pogma.com>
+
+	* config/ltmain.m4sh [darwin]: Don't add installed libs to 
+	temp_rpath when building executables on darwin, or other systems
+	which use hardcode_automatic. It may break our wrapper scripts.
+
 2005-02-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* config/getopt.m4sh (func_version, func_usage, func_help,
