--- a/THANKS
+++ b/THANKS
@@ -68,6 +68,7 @@
   Bruno Haible			haible@ilog.fr
   Carl D. Roth			roth@cse.ucsc.edu
   Chris P. Ross			cross@eng.us.uu.net
+  Daniel Reed			n@ml.org
   DJ Delorie			dj@delorie.com
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
   Erez Zadok			ezk@shekel.mcl.cs.columbia.edu
