--- a/THANKS
+++ b/THANKS
@@ -86,6 +86,7 @@
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
   Mark Kettenis			kettenis@phys.uva.nl
   Olly Betts			olly@muscat.co.uk
+  Patrick Welche		prlw1@newn.cam.ac.uk
   Paul Eggert			eggert@twinsun.com
   Peter Eisentraut		peter_e@gmx.net
   Rainer Orth			ro@TechFak.Uni-Bielefeld.DE
