--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-03 Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* THANKS: Update.
+
 2005-02-03  Reid Spencer  <reid@x10sys.com>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
