--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-03  Peter O'Gorman  <peter@pogma.com>
+
+	* README: Update.
+
 2005-02-03 Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* THANKS: Update.
