--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-09-21  Charles Wilson  <cwilson@spam.protected>
+
+	Backported from branch-2-0:
+	* ltmain.in (func_generate_dlsyms): addresses
+	in _preloaded_symbols[] cannot go into .rdata section
+	if symbols are DATA imported from DLL, on windows,
+	because runtime relocations must happen.
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS):
+	build exports for symbols in .rdata sections
+
 2005-02-03  Peter O'Gorman  <peter@pogma.com>
 
 	* README: Update.
