--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-2004-09-21  Charles Wilson  <cwilson@spam.protected>
+2005-02-03 Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (link mode): Backport yet another cygwin subdir fix
+	(wrappersource).
+
+2005-02-03  Charles Wilson  <cwilson@spam.protected>
 
 	Backported from branch-2-0:
 	* ltmain.in (func_generate_dlsyms): addresses
