--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-03  Reid Spencer  <reid@x10sys.com>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* config/ltmain.m4sh (func_generate_dlsyms): Fix broken subdir
+	path computation, exposed by using `-dlopen self'.  Fix broken
+	sed script exposed by additionally using `-export-symbols FILE'.
+
 2005-02-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* THANKS: Update.
