--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS: s/Linux/GNU &/.
+
 2005-02-03  Reid Spencer  <reid@x10sys.com>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
