--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-02-05  Peter O'Gorman  <peter@pogma.com>
 
+	Libtool-1.5.12 release
+
+	* libltdl/Makefile.am: Bump library revision (I remembered!).
+	* configure.ac: Bump version to 1.5.12.
+	* NEWS: Updated
+	* config.guess, config.sub: Updated.
+
 	* ltmain.in (func_extract_archives) [darwin]: This didn't actually
 	work on a real fat archive, should do now.
 	* tests/func_extract_archives.test: remove darwin fat tests which
