--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.5.11a: 2004-??-??; CVS version 1.5.11a, Libtool team:
+New in 1.5.12: 2004-02-05; CVS version 1.5.11a, Libtool team:
 * Support for Portland Group compiler on GNU/Linux.
 * Support (mostly) for DragonFly BSD.
 * Updated support for Intel compilers on GNU/Linux.
