--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-07  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in: Add -pthread like flags when linking executables too.
+	Reported by Andreas Schwab <schwab@suse.de>
+
 2005-02-05  Peter O'Gorman  <peter@pogma.com>
 
 	* configure.ac: Bump version to 1.5.13a
