--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-02-12  Peter O'Gorman  <peter@pogma.com>
 
+	* ChangeLog: Upped version to 1.5.15a.
+	* NEWS: Updated.
+
 	GNU libtool 1.5.14 is released.
 
 	* ChangeLog: Upped version to 1.5.14.
