--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.5.15a: 2005-??-??; CVS version 1.5.15a, Libtool team:
+* Bug Fixes.
+
 New in 1.5.14: 2005-02-12; CVS version 1.5.13a, Libtool team:
 * Make -pthread work when building executabless too.
 * Bug Fixes.
