* config/ltmain.m4sh (func_extract_archives) [darwin]: This didn't actually work on a real fat archive, should do now.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-21  Peter O'Gorman  <peter@pogma.com>
+
+	* config/ltmain.m4sh (func_extract_archives) [darwin]: This didn't
+	actually work on a real fat archive, should do now.
+
 2005-02-07  Peter O'Gorman  <peter@pogma.com>
 
 	* config/ltmain.m4sh: Add -pthread like flags when linking
