--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* libltdl/Makefile.am (install-data-local): Don't forget about
 	$(DESTDIR).
+	* libltdl/loaders/Makefile.am (install-data-local): Ditto.
 
 2005-02-23  Gary V. Vaughan  <gary@gnu.org>
 
