--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-25  Gary V. Vaughan  <gary@gnu.org>
+
+	* m4/libtool.m4 (_LT_LANG_CXX_CONFIG, _LT_COMPILER_PIC):
+	Fix some typos -- s/_LT_AC_TAGVAR/_LT_TAGVAR/g.
+
 2005-02-24  Peter O'Gorman  <peter@pogma.com>
 
 	* m4/libtool.m4 (_LT_LINKER_SHLIBS): The Portland group's 
