--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-02-25  Gary V. Vaughan  <gary@gnu.org>
 
+	* libtoolize.m4sh (func_copy): Split arguments to func_copy_cb
+	calls across lines so that quote.test doesn't misdiagnose nested
+	quotes.
+
 	* m4/libtool.m4 (_LT_LANG_CXX_CONFIG, _LT_COMPILER_PIC):
 	Fix some typos -- s/_LT_AC_TAGVAR/_LT_TAGVAR/g.
 
