--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,13 @@
+2005-03-02  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.m4sh (func_copy_cb): Use tar chof to avoid symlink
+	attacks.
+	* libltdl/Makefile.am (install-data-local): Ditto.
+
 2005-02-24  Peter O'Gorman  <peter@pogma.com>
 
-	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS): The Portland group's 
-	compiler does not pass --whole-archive. Move gnu ld check for 
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS): The Portland group's
+	compiler does not pass --whole-archive. Move gnu ld check for
 	the flag to the top so it can be overridden.
 	(AC_LIBTOOL_LANG_CXX_CONFIG): Unset whole_archive_flag_spec for
 	the portland group's c++ compiler too.
