--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* THANKS: Update.
+
 2005-03-02  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.m4sh (func_copy_cb): Use tar chof to avoid symlink
