--- a/THANKS
+++ b/THANKS
@@ -74,6 +74,7 @@
   Erez Zadok			ezk@shekel.mcl.cs.columbia.edu
   Eric Estievenart		eric@via.ecp.fr
   Frank Ch. Eigler		fche@cygnus.com
+  Fred Cox			sailorfred@yahoo.com
   H.J. Lu			hjl@gnu.org
   Ian Lance Taylor		ian@cygnus.com
   Jeff Squyres			jsquyres@lam-mpi.org
