--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* TODO: Update.
+
 	* THANKS: Update.
 
 2005-03-02  Gary V. Vaughan  <gary@gnu.org>
