--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-03-08  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
+	[irix*, osf*]: Output -update_registry information to
+	${output_objdir} directory, not ${objdir}. ${output_objdir}
+	will work when a project has a single Makefile and performs
+	builds in subdirectories. ${objdir} expects the source in
+	the current directory, breaking single-Makefile builds.
+
 2005-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/stresstest.at: Remove multiple variable definition.
